	PR tree-optimization/47391 	* varpool.c (const_value_known_p): Return false if 	decl is volatile.

* gcc.dg/pr47391.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169084 138bc75d-0d04-0410-961f-82ee72b054a4